TEST_PROGRAMS/VALID/luke_emery-fertitta/fact.min
# compute n!

var n: int;
var x: int;

read n;

x = 1;

while n do
	x = x * n;
	n = n - 1;
done

print n;
