TEST_PROGRAMS/INVALID/cheuk_siow/invalid3.min
# Invalid program 3: unexpected logical operator.

var n: int;
read n;
while n > 1 do
  n = n - 1;
done

